--- a/package.json
+++ b/package.json
@@ -1,28 +1,43 @@
 {
-    "name": "patientbot-backend",
-    "version": "1.0.0",
-    "type": "module",
-    "main": "server.js",
-    "scripts": {
-        "start": "node server.js",
-        "dev": "node --watch server.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "description": "",
-    "dependencies": {
-        "bcrypt": "^5.1.1",
-        "cors": "^2.8.5",
-        "crypto": "^1.0.1",
-        "dotenv": "^16.4.5",
-        "express": "^4.21.1",
-        "jsonwebtoken": "^9.0.2",
-        "nodemailer": "^6.9.16",
-        "pg": "^8.13.1",
-        "pg-hstore": "^2.3.4",
-        "sequelize": "^6.37.5",
-        "uuid": "^11.0.2"
-    }
+  "name": "patientbot-backend",
+  "version": "1.0.0",
+  "type": "module",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "node --watch server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
+  "dependencies": {
+    "@langchain/core": "^0.3.18",
+    "@langchain/openai": "^0.3.13",
+    "audio-decode": "^2.2.2",
+    "axios": "^1.7.7",
+    "bcrypt": "^5.1.1",
+    "compute-cosine-similarity": "^1.1.0",
+    "cors": "^2.8.5",
+    "cosine-similarity": "^1.0.1",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.4.5",
+    "events": "^3.3.0",
+    "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
+    "langchain": "^0.3.5",
+    "mic": "^2.1.2",
+    "ml-distance": "^4.0.1",
+    "node-record-lpcm16": "^0.3.1",
+    "nodemailer": "^6.9.16",
+    "openai": "^4.71.1",
+    "pg": "^8.13.1",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.5",
+    "socket.io-client": "^4.8.1",
+    "uuid": "^11.0.2",
+    "ws": "^8.18.0",
+    "zod": "^3.23.8"
+  }
 }
