--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "langchain": "^0.3.5",
     "mic": "^2.1.2",
     "ml-distance": "^4.0.1",
+    "multer": "^1.4.5-lts.1",
     "node-record-lpcm16": "^0.3.1",
     "nodemailer": "^6.9.16",
     "openai": "^4.71.1",
